force-app/main/default/objects/Multi_Asset__c/Multi_Asset__c.object-meta.xml
<CustomObject>
    <label>Multi-Asset</label>
    <nameField>
        <label>Multi-Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multi-Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>