force-app/main/default/objects/Multi_Asset__c/fields/Asset_1_Image_File_Url__c.field-meta.xml
<CustomField>
    <fullName>Asset_1_Image_File_Url__c</fullName>
    <formula>Asset_Name_1__r.Email_Image_File_Url__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 1 Image/File Url</label>
    <type>Text</type>
</CustomField>