force-app/main/default/objects/Multi_Asset__c/fields/Asset_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_1_Name__c</fullName>
    <formula>Asset_Name_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 1 Name</label>
    <type>Text</type>
</CustomField>