force-app/main/default/objects/Multi_Asset__c/fields/Asset_2_Email_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_2_Email_Description__c</fullName>
    <formula>Asset_Name_2__r.Email_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 2 Email Description</label>
    <type>Text</type>
</CustomField>