force-app/main/default/objects/Multi_Asset__c/fields/Asset_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_2_Name__c</fullName>
    <formula>Asset_Name_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 2 Name</label>
    <type>Text</type>
</CustomField>