force-app/main/default/objects/Multi_Asset__c/fields/Asset_3_Link_Url__c.field-meta.xml
<CustomField>
    <fullName>Asset_3_Link_Url__c</fullName>
    <formula>Asset_Name_3__r.Link_to_Website__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 3 Link Url</label>
    <type>Text</type>
</CustomField>