force-app/main/default/objects/Multi_Asset__c/fields/Asset_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_3_Name__c</fullName>
    <formula>Asset_Name_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset 3 Name</label>
    <type>Text</type>
</CustomField>