force-app/main/default/objects/Multi_Asset__c/fields/Asset_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name 1</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Multi-Assets</relationshipLabel>
    <relationshipName>Multi_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>