force-app/main/default/objects/Multi_Asset__c/fields/Asset_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name 2</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Multi-Assets (Asset Name 2)</relationshipLabel>
    <relationshipName>Multi_Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>