force-app/main/default/objects/Multi_Asset__c/fields/Asset_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name 3</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Multi-Assets (Asset Name 3)</relationshipLabel>
    <relationshipName>Multi_Assets3</relationshipName>
    <type>Lookup</type>
</CustomField>